--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -23,8 +23,17 @@
     margin-right: auto;
     width: 5%;
 }
-.float_left{
-    float: left;
+#index_main,
+#index_main_image{
+  float: left;
+}
+#index_main_image{
+    width: 300px;
+    height: 200px;
+    margin-right: 20px;
+}
+#index_figure {
+  position: relative;
 }
 .body{
     background-color: lightgrey;
@@ -70,12 +79,13 @@
     }        
   }
   
-/* @media (max-width: 600px) {
+/* 
+For reference purposes: 
 
+@media (max-width: 600px) {
   .navbar ul {
     visibility: hidden;
   }
-
   #nav-select {
     visibility: visible;
   }
@@ -89,10 +99,9 @@
     cursor: pointer;
     background: #fff;
     border-radius: 3px;
-  }
-  
-  .post {
+}
+.post {
     margin-top: 25px;
     margin-right: 50px;
     margin-left: 50px;
-  } */
+} */
