--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -1,42 +1,9 @@
-.index_container1_specs{
-    background-color: white;
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-bottom: 20px;
-    margin-right: auto;
-    width: 60%;
-}
-.index_container2_specs{
-    background-color: white;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-bottom: 20px;
-    margin-right: 50px;
-    width: 35%;
-    height: 50%;
-}
-.separation{
-    background-color: lightgrey;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-bottom: 20px;
-    margin-right: auto;
-    width: 5%;
-}
-#index_main,
-#index_main_image{
-  float: left;
-}
-#index_main_image{
-    width: 300px;
-    height: 200px;
-    margin-right: 20px;
-}
-#index_figure {
-  position: relative;
-}
 .body{
     background-color: lightgrey;
+}
+.navbar_padding{
+    padding: 0;
+    background-color: white;
 }
 .navbar_latitude{
     background-color: teal;
@@ -44,12 +11,41 @@
     font-size: 2em;
     margin-left : 75px;
 }
-.navbar_padding{
-    padding: 0;
-    background-color: white;
-}
 .navbar_styling{
-    margin-left : 525px;
+    margin-right : 75px;
+}
+.column1_specs{
+    background-color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#index_main,
+#index_main_image{
+  float: left;
+}
+#index_main_image{
+    width: 60%;
+    height: auto;
+    margin-right: 20px;
+}
+#main_image{
+    width: 70%;
+    height: auto;
+    margin-left: 75px;
+    padding-top: 0px;
+}
+#index_figure {
+  position: relative;
+}
+.column2_specs{
+    background-color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 50%;
+}
+.figure_caption{
+    text-align: center;
+    font-weight: bold; 
 }
 .data_container_specs{
     background-color: white;
@@ -57,10 +53,6 @@
     margin-left: auto;
     margin-bottom: 20px;
     margin-right: auto;
-}
-.figure_caption{
-    text-align: center;
-    font-weight: bold; 
 }
 @media (max-width: 991px) {
     .body{
@@ -70,38 +62,19 @@
     .navbar_padding{
         background-color:teal;
     }
-    .navbar_styling{
-        background-color: white;
-        margin-left : 0px;
-    }
     .navbar_latitude{
         margin-left: 75px;
     }        
-  }
-  
-/* 
-For reference purposes: 
-
-@media (max-width: 600px) {
-  .navbar ul {
-    visibility: hidden;
-  }
-  #nav-select {
-    visibility: visible;
-  }
+    .navbar_styling{
+        background-color: white;
+        margin-left : 0px;
+        margin-right : 0px;
+    }
+    .table_overflow{
+        overflow-y: hidden;
+        box-sizing: content-box;
+        box-shadow: 0 0 0 5px white;
+        padding-left:0px;
+        margin-top:25px;
+    }
 }
-
-.navbar li {
-    display: inline-block;
-    padding: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
-    cursor: pointer;
-    background: #fff;
-    border-radius: 3px;
-}
-.post {
-    margin-top: 25px;
-    margin-right: 50px;
-    margin-left: 50px;
-} */
